<resources>
    <string name="app_name">MTG Helper</string>
    <string name="game">Game</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="aboutMe">About Me</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="magic_the_gathering">Magic the Gathering</string>
    <string name="exit_btn">Exit</string>
    <string name="exit_app">Chcete ukoncit aplikaci ?</string>
    <string name="card_search_hint">Insert card name</string>
    <string name="add_to_collection">Add Card</string>
    <string name="input_card_name">Input card name</string>
    <string name="card_count">Card count</string>
    <string name="is_foil">Is Foil</string>
    <string name="is_signed">Is signed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mtg_helper">MTG HELPER ™</string>
    <string name="footer">©Janouch Marek, 2020</string>
    <string name="mtg_main_logo">Mtg Main Logo</string>
    <string name="home">Home</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_1">PLAYER 1</string>
    <string name="plus">+</string>
    <string name="startLives">20</string>
    <string name="minus">-</string>
    <string name="gameTime">35:00</string>
    <string name="start_game">START GAME</string>
    <string name="show_only_required">Only Required</string>
    <string name="show_all_cards">All Cards</string>
    <string name="requested_more">Requested more</string>
</resources>